Fix flex gap

--- a/src/layout.css
+++ b/src/layout.css
@@ -22,7 +22,7 @@
 .row, .col {
   display: flex;
   flex-wrap: wrap;
-  gap: calc(var(--spacing) * 8);
+  gap: calc(var(--spacing) * 3);
 }
 .row {
   flex-direction: row;
